resources/quay-p/quay/quay-service-tool.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  # TLS data s added from vault
  labels:
    service: quayio-service-tool
  name: quayio-service-tool-route
spec:
  host: service-tool.quay.io
  port:
    targetPort: http
  to:
    kind: Service
    name: quayio-service-tool
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
