resources/quay-p/quay/quay-py3-cloudflare.web-allow-external.networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-py3-cloudflare-allow-external
spec:
  podSelector:
    matchLabels:
      quay-py3-component: app-py3-cloudflare
  ingress:
    - {}
  policyTypes:
    - Ingress
