resources/quay-p/quay/quay.web-allow-external.networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: quay
spec:
  podSelector:
    matchLabels:
      quay-component: app
  ingress:
    - {}
  policyTypes:
    - Ingress
